screenrc: add quick-n-dirty hack to generate stty call for use with serial terminals
Due to the nature of using screen with serial terminals the exec
command will actually execute locally, and get the size of the
terminal using the resize command that ships with xterm.

Unfortunately it doesn't insert the generated values, it only displays
them, requiring you to copy and paste.

TODO: * Needs to actually insert the text
      * Get the sizes of the terminal using something else than
      resize. Either via using escape codes directly, or perhaps
      'tput lines' and 'tput cols'.

--- a/src/.screenrc
+++ b/src/.screenrc
@@ -35,3 +35,7 @@ attrcolor b ".I"
 termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 # erase background with current bg color
 defbce "on"
+
+# bind o exec /bin/sh -c "resize | head -2 | tr '\n' ' '"   # needs fixing...
+# bind o exec /bin/sh -c "resize | head -2 | tr '\n' ' ' | sed -e 's/;//g' -e 's/COLUMNS=/cols /' -e 's/LINES=/rows /"
+bind o exec /bin/sh -c 'resize | head -2 | tr "\n" " " | sed -e "s/;//g" -e "s/COLUMNS=/cols /" -e "s/LINES=/rows /" -e "s/^/stty /"'
