screenrc: destroy ^x binding as well
Turns out I manage to hit C-z C-x sometimes by accident as well...

--- a/src/.screenrc
+++ b/src/.screenrc
@@ -37,3 +37,4 @@ termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 defbce "on"
 
 bind x exec /bin/sh -c 'resize | head -2 | tr "\n" " " | sed -e "s/;//g" -e "s/COLUMNS=/cols /" -e "s/LINES=/rows /" -e "s/^/stty /"'
+bind ^x
