--- a/src/redshift-usbee.conf
+++ b/src/redshift-usbee.conf
@@ -1,8 +1,14 @@
 [redshift]
 adjustment-method=randr
 location-provider=manual
-temp-day=4300
-temp-night=3600
+# temp-day=4300
+# temp-night=3600
+temp-day=3500
+# temp-day=3000
+# temp-night=3000
+#temp-day=4000
+temp-night=3000
+
 
 [manual]
 lat=59.3293
