--- a/src/kitty/kitty.conf
+++ b/src/kitty/kitty.conf
@@ -709,8 +709,8 @@ macos_custom_beam_cursor no
 #: on both light and dark backgrounds. WARNING: this might make your
 #: mouse cursor invisible on dual GPU machines.
 
-# linux_display_server auto
-linux_display_server wayland
+linux_display_server auto
+#linux_display_server wayland
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
