--- a/src/kitty/kitty.conf
+++ b/src/kitty/kitty.conf
@@ -929,8 +929,8 @@ map kitty_mod+l next_layout
 #: You can change the font size for all top-level kitty OS windows at
 #: a time or only the current one.
 
-map kitty_mod+equal     change_font_size all +2.0
-map kitty_mod+minus     change_font_size all -2.0
+map kitty_mod+PgUp      change_font_size all +2.0
+map kitty_mod+PgDn      change_font_size all -2.0
 map kitty_mod+backspace change_font_size all 0
 
 #: To setup shortcuts for specific font sizes::
