--- a/src/.screenrc
+++ b/src/.screenrc
@@ -38,3 +38,6 @@ defbce "on"
 
 bind x exec /bin/sh -c 'resize | head -2 | tr "\n" " " | sed -e "s/;//g" -e "s/COLUMNS=/cols /" -e "s/LINES=/rows /" -e "s/^/stty /"'
 bind ^x
+
+# Bring the current copy/paste buffer inte X11
+bind b eval "writebuf" "exec sh -c 'xsel --clipboard < /tmp/screen-exchange'"
