--- a/src/.screenrc
+++ b/src/.screenrc
@@ -36,7 +36,7 @@ termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 # erase background with current bg color
 defbce "on"
 
-bind x exec /bin/sh -c 'resize | head -2 | tr "\n" " " | sed -e "s/;//g" -e "s/COLUMNS=/cols /" -e "s/LINES=/rows /" -e "s/^/stty /"'
+bind x exec sh -c 'resize | head -2 | tr "\n" " " | sed -e "s/;//g" -e "s/COLUMNS=/cols /" -e "s/LINES=/rows /" -e "s/^/stty /" > /tmp/screen-exchange; screen -X readbuf'
 bind ^x
 
 # Bring the current copy/paste buffer inte X11
