screenrc: switch to use "stty size" for UART TTY size hack
This should be more portable, and is a bit cleaner as well (if you can
just ignore all the ugly escaping needed for the awk)

--- a/src/.screenrc
+++ b/src/.screenrc
@@ -36,7 +36,7 @@ termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 # erase background with current bg color
 defbce "on"
 
-bind x exec sh -c 'resize | head -2 | tr "\n" " " | sed -e "s/;//g" -e "s/COLUMNS=/cols /" -e "s/LINES=/rows /" -e "s/^/stty /" > /tmp/screen-exchange; printf "\\n%s\\n" "export TERM=screen-256color" >> /tmp/screen-exchange; screen -X readbuf'
+bind x exec sh -c 'stty size | awk "{ print \"stty rows\",\$1,\"cols\",\$2 }" > /tmp/screen-exchange; printf "%s\\n" "export TERM=screen-256color" >> /tmp/screen-exchange; screen -X readbuf'
 bind ^x
 
 # Bring the current copy/paste buffer inte X11
