kitty: Note about emacs binding collision
Ah emacs and your ability to use all possible keybinds.

On another note this kitty config is quite old and has some settings
that are now deprecated. It should probably be updated.

--- a/src/kitty/kitty.conf
+++ b/src/kitty/kitty.conf
@@ -931,6 +931,7 @@ map kitty_mod+l next_layout
 
 map kitty_mod+PgUp      change_font_size all +2.0
 map kitty_mod+PgDn      change_font_size all -2.0
+# FIXME: collides with emacs binding for kill-whole-line
 map kitty_mod+backspace change_font_size all 0
 
 #: To setup shortcuts for specific font sizes::
