Switch browser to librewolf where it makes sense

--- a/src/kitty/kitty.conf
+++ b/src/kitty/kitty.conf
@@ -802,7 +802,7 @@ map kitty_mod+o  pass_selection_to_program
 #: will be passed as a command line argument to the program, for
 #: example::
 
-#:     map kitty_mod+o pass_selection_to_program firefox
+#:     map kitty_mod+o pass_selection_to_program librewolf
 
 #: You can pass the current selection to a terminal program running in
 #: a new kitty window, by using the @selection placeholder::
